fix: resolve ZodError and implement deep linking for iOS/Android
- Fix TypeScript error in auth.routes.ts by using  instead of .
- Implement deep linking in frontend  and .
- Add  endpoint to backend to support fetching reminders by ID.
- Configure iOS  and  for  scheme and notifications.
- Configure Android  for  intent filter.
- Fix iOS build by enabling modular headers for  in .

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,19 @@
     "build": "tsc"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.9",
     "mongodb-memory-server": "^11.0.1",
