--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0"
