feat: Add EAS configuration and project ID, and downgrade Gradle wrapper to 8.13.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,4 +1,9 @@
 {
   "name": "frontend",
-  "displayName": "Reminder"
+  "displayName": "Reminder",
+  "extra": {
+    "eas": {
+      "projectId": "47d4c246-8765-4035-8aa2-c058ce5e171d"
+    }
+  }
 }
